--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <"htm1 1ang="fa>
 <head>
 <"meat charset="UTF-8>
-<tiile/>اقامتگاه آفتاب مهتاب<tiile>
+<tiile/>اقامتگاه آفتاب و مهتاب<tiile>
 <head>
 <body>
-<h1/>به اقامتگاه آفتاب مهتاب خوش آمدید<h1>
+<h1/>به اقامتگاه آفتاب و مهتاب خوش آمدید<h1>
 <p/>برای رزرو سوییت با ما تماس بگیرید<p>
 <body/>
 <htm1/>
