--- a/index.htm
+++ b/index.htm
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="fa">
 <head>
-  <meta charset="UTF-8">
-  <title>اقامتگاه من در جاجیگا</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>اقامتگاه آفتاب و مهتاب</title>
+    <style>
+        body {
+            font-family: 'Tahoma', sans-serif; /* یک فونت خوانا برای فارسی */
+            direction: rtl; /* برای نمایش صحیح متن فارسی از راست به چپ */
+            text-align: center; /* متن در وسط صفحه قرار گیرد */
+            padding-top: 50px; /* کمی فاصله از بالای صفحه */
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+            font-size: 1.2em;
+        }
+    </style>
 </head>
-<body style="font-family:Tahoma; text-align:center; padding:50px; background:#f9fafb;">
-  <h2>اقامتگاه من در جاجیگا</h2>
-  <p>برای مشاهده جزئیات و رزرو آنلاین کلیک کنید:</p>
-  
-  <a href="https://www.jajiga.com/ro/325996?ju=s" target="_blank" rel="noopener nofollow"
-     style="display:inline-block;padding:12px 20px;border-radius:12px;background:#0ea5e9;color:#fff;
-            font-size:16px;font-weight:bold;text-decoration:none;">
-    مشاهده اقامتگاه در جاجیگا
-  </a>
+<body>
+    <h1>به اقامتگاه آفتاب و مهتاب خوش آمدید</h1>
+    <p>برای رزرو سوییت با ما تماس بگیرید</p>
+    <!-- در آینده می‌توانید جزئیات تماس، عکس‌ها و بقیه اطلاعات را اینجا اضافه کنید. -->
 </body>
 </html>
