--- a/index.htm
+++ b/index.htm
@@ -1,28 +1,98 @@
+
+html_code = """
 <!DOCTYPE html>
 <html lang="fa">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>اقامتگاه آفتاب و مهتاب</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Tahoma', sans-serif; /* یک فونت خوانا برای فارسی */
+            font-family: 'Vazirmatn', sans-serif; /* فونت مرتب فارسی */
             direction: rtl; /* برای نمایش صحیح متن فارسی از راست به چپ */
-            text-align: center; /* متن در وسط صفحه قرار گیرد */
-            padding-top: 50px; /* کمی فاصله از بالای صفحه */
+            margin: 0;
+            padding: 0;
+            background-image: url('https://source.unsplash.com/1600x900/?nature,iran'); /* تصویر پس‌زمینه طبیعت */
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            color: #fff; /* رنگ متن سفید برای خوانایی روی پس‌زمینه */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh; /* حداقل ارتفاع صفحه به اندازه viewport */
+            text-align: center;
+            position: relative;
+            overflow: hidden; /* جلوگیری از اسکرول غیرضروری */
         }
+
+        body::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5); /* لایه تیره‌تر برای خوانایی بهتر متن */
+            z-index: 1;
+        }
+
+        .container {
+            position: relative;
+            z-index: 2;
+            background-color: rgba(255, 255, 255, 0.15); /* پس‌زمینه کمی شفاف برای محتوا */
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+            max-width: 800px;
+            margin: 20px;
+        }
+
         h1 {
-            color: #333;
+            font-size: 3em;
+            margin-bottom: 20px;
+            color: #f0f0f0; /* رنگ سفید-خاکستری برای عنوان */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* سایه برای برجستگی متن */
         }
+
         p {
-            color: #666;
-            font-size: 1.2em;
+            font-size: 1.4em;
+            line-height: 1.6;
+            margin-bottom: 30px;
+            color: #e0e0e0;
+        }
+
+        .reserve-button {
+            display: inline-block;
+            background-color: #4CAF50; /* رنگ سبز جذاب برای دکمه رزرو */
+            color: white;
+            padding: 15px 30px;
+            text-align: center;
+            text-decoration: none;
+            font-size: 1.5em;
+            border-radius: 8px;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .reserve-button:hover {
+            background-color: #45a049; /* کمی تیره‌تر در هنگام هاور */
+            transform: scale(1.05); /* کمی بزرگ‌تر شدن دکمه */
         }
     </style>
 </head>
 <body>
-    <h1>به اقامتگاه آفتاب و مهتاب خوش آمدید</h1>
-    <p>برای رزرو سوییت با ما تماس بگیرید</p>
-    <!-- در آینده می‌توانید جزئیات تماس، عکس‌ها و بقیه اطلاعات را اینجا اضافه کنید. -->
+    <div class="container">
+        <h1>به اقامتگاه آفتاب و مهتاب خوش آمدید</h1>
+        <p>جایی که آرامش طبیعت با آسایش خانه‌ شما پیوند می‌خورد. لحظاتی دلنشین و فراموش‌نشدنی را در فضایی گرم و صمیمی تجربه کنید.</p>
+        <p>برای رزرو سوئیت‌های ما و کسب اطلاعات بیشتر، روی دکمه زیر کلیک کنید:</p>
+        <a href="https://www.jajiga.com/your-guesthouse-profile" target="_blank" class="reserve-button">همین الان رزرو کنید!</a>
+        <p style="margin-top: 30px; font-size: 1em; color: #bbb;">(لینک جاجیگاه در یک پنجره جدید باز می‌شود)</p>
+    </div>
 </body>
 </html>
+"""
+print(html_code)
