--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,3 @@
-
-html_code = """
 <!DOCTYPE html>
 <html lang="fa">
 <head>
@@ -89,9 +87,9 @@ html_code = """
         <h1>به اقامتگاه آفتاب و مهتاب خوش آمدید</h1>
         <p>جایی که آرامش طبیعت با آسایش خانه‌ شما پیوند می‌خورد. لحظاتی دلنشین و فراموش‌نشدنی را در فضایی گرم و صمیمی تجربه کنید.</p>
         <p>برای رزرو سوئیت‌های ما و کسب اطلاعات بیشتر، روی دکمه زیر کلیک کنید:</p>
-        <a href="https://www.jajiga.com/your-guesthouse-profile" target="_blank" class="reserve-button">همین الان رزرو کنید!</a>
-        <p style="margin-top: 30px; font-size: 1em; color: #bbb;">(لینک جاجیگاه در یک پنجره جدید باز می‌شود)</p>
+        <button class="reserve-button" onclick="alert('لطفا برای رزرو با شماره تلفن یا ایمیل اقامتگاه تماس بگیرید.')">همین الان رزرو کنید!</button>
     </div>
 </body>
 </html>
-"""
+
+
