--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
             direction: rtl; /* برای نمایش صحیح متن فارسی از راست به چپ */
             margin: 0;
             padding: 0;
-            background-image: url('https://source.unsplash.com/1600x900/?nature,iran'); /* تصویر پس‌زمینه طبیعت */
+            background-image: url('https://source.unsplash.com/1600x900/?nature,iran'); /* Screenshot_۲۰۲۵۰۷۰۱-۱۴۳۷۲۴_Gallery.jpg */
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
