--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
             background-image: url('https://source.unsplash.com/1600x900/?nature,iran'); /* Screenshot_۲۰۲۵۰۷۰۱-۱۴۳۷۲۴_Gallery.jpg */
             background-size: cover;
             background-position: center;
-            background-attachment: fixed;
+            background-attachment:Screenshot_۲۰۲۵۰۷۰۱-۱۴۳۷۲۴_Gallery (3).jpg;
             color: #fff; /* رنگ متن سفید برای خوانایی روی پس‌زمینه */
             display: flex;
             justify-content: center;
